Check preventStealing earlier in ColumnView

BUG:460345